tests/parse-errors/continueOutsideLoop.rock
While True
say "Hi"
(end loop)
continue
